--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,12 @@
 body {
+    /*background-color: gold;*/
     font-family: 'Poor Story', 'cursive';
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.container {
+    background-color: gold;
 }
 
 #head-container {
@@ -8,13 +15,13 @@ body {
 
 #head {
     text-align: center;
-    background-color: #141f3d;
+    background-color: red;
     color: white;
     padding: 2%;
 }
 
 .panel-custom {
-    background-color: #141f3d;
+    background-color: red;
     color: white;
 }
 
